<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_list"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/card_view">

            <ImageView
                android:id="@+id/img_mobil_ikln"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:background="@color/bck_img"
                android:contentDescription="@string/img_ikln"
                app:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/jenis_mobil_ikln"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/img_mobil_ikln"
                android:layout_alignParentStart="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="0dp"
                android:text="@string/_2011_masda_21_5_r_sedan"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/kmi_kln"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/jenis_mobil_ikln"
                android:layout_alignParentStart="true"
                android:layout_marginStart="29dp"
                android:layout_marginTop="2dp"
                android:text="@string/_90_95_km"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/transmisi_ikln"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/jenis_mobil_ikln"
                android:layout_marginStart="158dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="7dp"
                android:text="@string/automatic"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="190dp"
                android:layout_marginBottom="25dp"
                android:text="Rp. 120.000.000"
                android:textColor="@color/colorsplash"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="normal" />
        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>