<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profile">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:src="@mipmap/ic_launcher"
                    app:civ_border_color="#fff"
                    app:civ_border_width="2dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/profile_image"
                    android:layout_marginEnd="60dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="120dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kadek_dede_setiawan"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/ubahprofile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lihat_dan_ubah_profil_anda" />

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dedenht76_gmail_com"
                        android:textSize="15sp" />

                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/favoritesaya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:text="Iklan Favorite"
                android:textSize="20sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="2dp">
            <TextView
                android:id="@+id/iklansaya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:text="Iklan Saya"
                android:textSize="20sp" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="2dp">
            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:text="about aplikasi mila"
                android:textSize="20sp" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="2dp">
            <TextView
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:text="Contact Mila"
                android:textSize="20sp" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

</FrameLayout>